# NailSnake

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md
.github/workflows/: rust.yml
build-scripts/: linux.sh  macos.sh  termux.sh  windows.ps1
man/: nailsnake.1
scripts/: install-man.ps1  install-man.sh
src/: app.rs  config.rs  game.rs  lib.rs  main.rs  platform.rs  theme.rs  ui.rs
tests/: integration.rs
