[package]
name = "NailSnake"
version = "1.0.0"
edition = "2021"
description = "Cross-platform terminal Snake for Windows, Linux, and macOS"
license = "MIT"
authors = ["Voltsparx <voltsparx@gmail.com>"]
keywords = ["snake", "tui", "terminal", "game", "cli", "cross-platform"]
categories = ["games", "command-line-utilities"]
readme = "README.md"
include = [
    "src/**/*",
    "man/**/*",
    "scripts/**/*",
    "Makefile",
    "LICENSE",
    "README.md",
]

[[bin]]
name = "nailsnake"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true

[package.metadata.deb]
maintainer = "Voltsparx <voltsparx@gmail.com>"
copyright = "2026, Voltsparx"
extended-description = """\
NailSnake is a full-screen terminal Snake game for Windows, Linux, and macOS.
Run `man nailsnake` after installing the man page (make install-man)."""
assets = [
    ["target/release/nailsnake", "usr/bin/nailsnake", "755"],
    ["man/nailsnake.1", "usr/share/man/man1/nailsnake.1", "644"],
]
